<?xml version="1.0"?>
<package>
  <name>zanice_stdr_libs</name>
  <version>0.0.0</version>
  <description>The path_action_server package</description>
  
  <maintainer email="zanice@todo.todo">zanice</maintainer>
  
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>stdr_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>stdr_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  
  <export>
  </export>
</package>

