<?xml version="1.0"?>
<package>
  <name>basic_path_action_server</name>
  <version>0.0.0</version>
  <description>The basic_path_action_server package</description>
  
  <maintainer email="zanice@todo.todo">zanice</maintainer>
  
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>stdr_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>simple_action_client</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>stdr_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>simple_action_client</run_depend>
  <run_depend>message_runtime</run_depend>
  
  <export>
  </export>
</package>

